Dec_23_#1 emotion library for css

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
           integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
           crossorigin="anonymous"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/emotion-core/11.0.0/emotion-core.cjs.min.js"
+            integrity="sha512-EjnluJ1BDNdWhdEJcztEWYiaVZ+cYMH6N+5v/3d4kK3SLIEcBYmiIg1VSmFOCz2eJXUKBawHzj+uz9fmuK1mLg=="
+            crossorigin="anonymous">
+    </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
